# BTC-1H-RSI-Coinbase

./: .env  pyproject.toml
hermes_trading/: __init__.py  loop.py  reflect.py  score.py
hermes_trading/adapters/: price.py
state/: goal.yaml  strategy.yaml
