[project]
name = "btc-1h-rsi-coinbase"
version = "0.1.0"
description = "BTC/USD RSI mean-reversion on Coinbase 1H (paper trading)"
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "anthropic>=0.25.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hermes_trading", "hermes_trading.adapters"]
